<resources>
    <string name="app_name">QuizAppCustom</string>
    <string name="welcome_message">Hello! Welcome to the quiz! Put your name in the box below, and when you are ready, click the start button.</string>
    <string name="start">Start</string>
    <string name="hint">Enter your name here.</string>
    <string name="player_name">Player: Default</string>
    <string name="top_display">Quiz Time!</string>
    <string name="question">Question 0.
    What is the answer to this question?</string>
    <string name="answer">Answer</string>
    <string name="next">Continue</string>
    <string name="congrats">Congratulations for finishing! You got number right!</string>
    <string name="score">Score distribution: </string>
    <string name="score_dist">4: 0, 3: 0, 2: 0, 1: 0, 0: 0</string>
    <string name="find">Find Score</string>
    <string name="replay">Replay</string>
</resources>
